src/test/deca/syntax/invalid/intermediaire2/elseif/02noif.deca
// Description:
//    tests de programme incorrect lexicalement : 
//    il manque le bloc if
//
// Resultats:
//    02noif.deca:12:4:   
//
// Historique:
//    cree le 08/06/2022

{
    else if (2 > 1) {
    }
}